syntax = "proto3";

package auth;

import "google/protobuf/timestamp.proto";
import "internal/auth/proto/annotations.proto";

option go_package = ".;auth_pb";


service AuthService {
    rpc Signup (SignupAuthRequest) returns (SignupAuthResponse) {
        option (google.api.http) = {
            post: "/auth/signup"
            body: "*"
        };
    }
    rpc Login (LoginAuthRequest) returns (LoginAuthResponse) {
        option (google.api.http) = {
            post: "/auth/login"
            body: "*"
        };
    };
    rpc Refresh (RefreshAuthRequest) returns (RefreshAuthResponse) {
        option (google.api.http) = {
            post: "/auth/refresh"
            body: "*"
        };
    };
}

message User {
    uint32 id = 1;
    string username = 2;
    string address = 3;
    google.protobuf.Timestamp regdate = 4;
}

// Signup

message SignupAuthRequest {
    string username = 1;
    string password = 2;
    string address = 3;
}

message SignupAuthResponse {
    User user = 1;
}

// Login

message LoginAuthRequest {
    string username = 1;
    string password = 2;
}

message LoginAuthResponse {
    string accessToken = 1;
    string refreshToken = 2;
}

// Refresh

message RefreshAuthRequest {
    string refreshToken = 1;
}

message RefreshAuthResponse {
    string accessToken = 1;
    string refreshToken = 2;
}